# vowpal_wabbit

./: CMakeLists.txt  README.md  changes_from_upstream.md  libvw.pc.in
.github/workflows/: build_docs.yml  build_linux_cpp.yml  build_linux_cpp_valgrind.yml  build_python_wheels.yml  build_python_wheels_macos.yml  build_python_wheels_windows.yml  build_vw_slim.yml  build_windows_cmake.yml  format_check.yml  format_fix.yml  run_benchmarks.yml  run_benchmarks_manual.yml  test_workflow.yml  upload_coverage.yml
.scripts/linux/: build-minimal.sh  build-with-coverage.sh  build.sh  test-valgrind.sh  test-with-coverage.sh  unit-tests-valgrind.sh
bindings/c/include/vw/experimental/: types.h  workspace.h
bindings/c/src/: c_io_adapter.cc  c_io_adapter.h  workspace.cc
bindings/c/test/: test_main.cc
cluster/: spanning_tree_main.cc
cs/cli/: clr_io.h  spanning_tree_clr.h  vowpalwabbit.h  vw_arguments.h  vw_base.h  vw_builder.h  vw_cbutil.h  vw_clr.h  vw_example.h  vw_interface.h  vw_label.h  vw_labelcomparator.h  vw_model.h  vw_prediction.h  vw_settings.h
explore/: hash.h
java/src/main/c++/: jni_base_learner.cc  jni_base_learner.h  jni_spark_cluster.cc  jni_spark_vw.cc  jni_spark_vw.h  util.cc  vowpalWabbit_learner_VWCCBLearner.cc  vowpalWabbit_learner_VWLearners.cc
python/: pylibvw.cc
python/tests/: test_pyvw.py
python/vowpalwabbit/: pyvw.py
test/: RunTests  cubic-test.sh  run_tests.py  save_resume_test.py
test/benchmarks/: CMakeLists.txt  benchmarks_common.cc  benchmarks_common.h  input_format_benchmarks.cc
test/benchmarks/standalone/: benchmark_text_input.cc  benchmarks_common.cc  rcv1_benchmarks.cc
test/test-sets/ref/: chain_hash_json_test.stderr  metrics.json  metrics_2.json
test/tools/parser_throughput/: main.cc
test/train-sets/ref/: 0002a.stderr  cbe_adf_dsjson.stderr  cbe_adf_dsjson_chain_hash.stderr  cbe_adf_dsjson_metrics.stderr  first_load.stderr  first_save.stderr  help.stdout  help_cbadf.stdout  library_train.stderr  malformed-strict_parse.stderr  metrics_time.stderr  regcb_load.stderr  regcb_save.stderr  squarecb_load.stderr  squarecb_save.stderr  topk-train.stderr  xxor.stderr
test/unit_test/: CMakeLists.txt  cache_test.cc  cats_test.cc  cats_tree_tests.cc  cats_user_provided_pdf.cc  cb_explore_adf_test.cc  ccb_parser_test.cc  ccb_test.cc  chain_hashing.cc  continuous_actions_parser_test.cc  distributionally_robust_test.cc  dsjson_parser_test.cc  error_test.cc  example_header_test.cc  explore_test.cc  flatbuffer_parser_test.cc  guard_test.cc  initialize_test.cc  interactions_test.cc  io_adapter_test.cc  json_parser_test.cc  math_test.cc  multiclass_label_parser_test.cc  namespaced_features_test.cc  numeric_cast_tests.cc  object_pool_test.cc  offset_tree_tests.cc  options_boost_po_test.cc  options_test.cc  ostream_test.cc  parse_args_test.cc  parser_test.cc  pmf_to_pdf_test.cc  power_test.cc  prediction_test.cc  scope_exit_test.cc  slates_parser_test.cc  slates_test.cc  tag_utils_test.cc  test_common.cc  (+4 more)
utl/: clang-format
utl/flatbuffer/: CMakeLists.txt  txt_to_flat.cc  vw_to_flat.cc  vw_to_flat.h
vowpalwabbit/: CMakeLists.txt  OjaNewton.cc  OjaNewton.h  accumulate.cc  accumulate.h  action_score.cc  action_score.h  active.cc  active.h  active_cover.cc  active_cover.h  active_multiclass_prediction.h  allreduce_sockets.cc  api_status.cc  api_status.h  array_parameters.h  array_parameters_dense.h  audit_regressor.cc  audit_regressor.h  autolink.cc  autolink.h  baseline.cc  baseline.h  best_constant.cc  best_constant.h  bfgs.cc  bfgs.h  binary.cc  binary.h  boosting.cc  boosting.h  bs.cc  bs.h  cache.cc  cache.h  cats.cc  cats.h  cats_pdf.cc  cats_pdf.h  cats_tree.cc  (+261 more)
vowpalwabbit/io/: custom_streambuf.h  io_adapter.cc  io_adapter.h  logger.cc  logger.h  owning_stream.h
vowpalwabbit/parser/flatbuffer/: parse_example_flatbuffer.cc  parse_example_flatbuffer.h  parse_label.cc
vowpalwabbit/parser/flatbuffer/schema/: example.fbs
vowpalwabbit/slim/src/: vw_slim_predict.cc
